Most common fields of the dm_job can be edited now

--- a/src/main/resources/nl/bos/views/JobEditorPane.fxml
+++ b/src/main/resources/nl/bos/views/JobEditorPane.fxml
@@ -164,7 +164,8 @@
             </HBox>
             <HBox spacing="5.0">
                 <TextField fx:id="txtContinuousInterval"/>
-                <CheckBox fx:id="cbPassStandardArguments" mnemonicParsing="false" text="Pass standard arguments">
+                <CheckBox fx:id="chkPassStandardArguments" mnemonicParsing="false" text="Pass standard arguments"
+                          onAction="#handleCheckBox">
                     <HBox.margin>
                         <Insets top="3.0"/>
                     </HBox.margin>
