Export resultlist to CSV 1.0

--- a/src/main/resources/nl/bos/views/BodyPane.fxml
+++ b/src/main/resources/nl/bos/views/BodyPane.fxml
@@ -11,7 +11,7 @@
                 <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
             </padding>
             <Label text="Result"/>
-            <TableView fx:id="tbResult" VBox.vgrow="ALWAYS"/>
+            <TableView fx:id="tvResult" VBox.vgrow="ALWAYS"/>
         </VBox>
         <VBox>
             <padding>
