--- a/src/main/resources/nl/bos/views/InputPane.fxml
+++ b/src/main/resources/nl/bos/views/InputPane.fxml
@@ -99,6 +99,9 @@
                 <padding>
                     <Insets left="5.0" right="5.0"/>
                 </padding>
+                <tooltip>
+                    <Tooltip fx:id="ttStatus"/>
+                </tooltip>
             </Label>
             <ImageView fitHeight="16.0" fitWidth="16.0" pickOnBounds="true" preserveRatio="true">
                 <image>
@@ -109,6 +112,9 @@
                 <padding>
                     <Insets left="5.0" right="5.0"/>
                 </padding>
+                <tooltip>
+                    <Tooltip fx:id="ttOSUsername"/>
+                </tooltip>
             </Label>
             <ImageView fitHeight="16.0" fitWidth="16.0" pickOnBounds="true" preserveRatio="true">
                 <image>
@@ -119,6 +125,9 @@
                 <padding>
                     <Insets left="5.0" right="5.0"/>
                 </padding>
+                <tooltip>
+                    <Tooltip fx:id="ttDCUsername"/>
+                </tooltip>
             </Label>
             <ImageView fitHeight="16.0" fitWidth="16.0" pickOnBounds="true" preserveRatio="true">
                 <image>
@@ -129,6 +138,9 @@
                 <padding>
                     <Insets left="5.0" right="5.0"/>
                 </padding>
+                <tooltip>
+                    <Tooltip fx:id="ttDomain"/>
+                </tooltip>
             </Label>
             <ImageView fitHeight="16.0" fitWidth="16.0" pickOnBounds="true" preserveRatio="true">
                 <image>
@@ -139,6 +151,9 @@
                 <padding>
                     <Insets left="5.0" right="5.0"/>
                 </padding>
+                <tooltip>
+                    <Tooltip fx:id="ttPrivileges"/>
+                </tooltip>
             </Label>
             <ImageView fitHeight="16.0" fitWidth="16.0" pickOnBounds="true" preserveRatio="true">
                 <image>
@@ -149,6 +164,9 @@
                 <padding>
                     <Insets left="5.0" right="5.0"/>
                 </padding>
+                <tooltip>
+                    <Tooltip fx:id="ttServerVersion"/>
+                </tooltip>
             </Label>
         </HBox>
     </bottom>
