--- a/src/main/resources/nl/bos/views/BodyPane.fxml
+++ b/src/main/resources/nl/bos/views/BodyPane.fxml
@@ -2,6 +2,8 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.*?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.*?>
 <VBox xmlns:fx="http://javafx.com/fxml/1" fx:id="vboxBody" BorderPane.alignment="CENTER"
       xmlns="http://javafx.com/javafx/8.0.121" fx:controller="nl.bos.controllers.BodyPane">
@@ -20,7 +22,20 @@
             <Label text="DQL/SQL Statement"/>
             <TextArea fx:id="taStatement" VBox.vgrow="ALWAYS"/>
             <Label text="DQL/SQL History"/>
-            <ChoiceBox fx:id="cmbHistory"/>
+            <HBox>
+                <children>
+                    <ChoiceBox fx:id="cmbHistory"/>
+                    <ImageView fx:id="btnDeleteHistoryItem" fitHeight="24.0" fitWidth="24.0"
+                               onMouseClicked="#handleDeleteHistoryItem" pickOnBounds="true" preserveRatio="true">
+                        <HBox.margin>
+                            <Insets left="5.0"/>
+                        </HBox.margin>
+                        <image>
+                            <Image url="@../icons/delete.gif"/>
+                        </image>
+                    </ImageView>
+                </children>
+            </HBox>
         </VBox>
     </SplitPane>
 </VBox>
