--- a/src/main/resources/nl/bos/views/BodyPane.fxml
+++ b/src/main/resources/nl/bos/views/BodyPane.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.*?>
-<VBox xmlns:fx="http://javafx.com/fxml/1" fx:id="vboxBody" BorderPane.alignment="CENTER"
+<VBox xmlns:fx="http://javafx.com/fxml/1" fx:id="vBoxBody" BorderPane.alignment="CENTER"
       xmlns="http://javafx.com/javafx/8.0.121" fx:controller="nl.bos.controllers.BodyPane">
     <SplitPane dividerPositions="0.6" orientation="VERTICAL">
         <VBox>
