--- a/src/main/resources/nl/bos/views/DescribeObject.fxml
+++ b/src/main/resources/nl/bos/views/DescribeObject.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <HBox xmlns:fx="http://javafx.com/fxml/1" prefHeight="250.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.121"
-      fx:controller="nl.bos.controllers.DescribeObjectPane">
+      fx:controller="nl.bos.controllers.DescribeObject">
     <VBox prefWidth="300.0" spacing="10.0">
         <HBox.margin>
             <Insets left="5.0" top="5.0"/>
