--- a/src/main/resources/nl/bos/views/GetAttributes.fxml
+++ b/src/main/resources/nl/bos/views/GetAttributes.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <VBox xmlns:fx="http://javafx.com/fxml/1" prefHeight="600.0" prefWidth="650.0" xmlns="http://javafx.com/javafx/8.0.121"
-      fx:controller="nl.bos.controllers.GetAttributesPane">
+      fx:controller="nl.bos.controllers.GetAttributes">
     <TextArea fx:id="txaAttributes" editable="false" prefHeight="500.0">
         <VBox.margin>
             <Insets left="5.0" right="5.0" top="5.0"/>
