--- a/src/main/resources/nl/bos/views/JobEditor.fxml
+++ b/src/main/resources/nl/bos/views/JobEditor.fxml
@@ -7,7 +7,7 @@
 <?import nl.bos.DateTimePicker?>
 <VBox xmlns:fx="http://javafx.com/fxml/1" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity"
       minWidth="-Infinity" prefHeight="800.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.121"
-      fx:controller="nl.bos.controllers.JobEditorPane">
+      fx:controller="nl.bos.controllers.JobEditor">
     <HBox>
         <VBox spacing="5.0">
             <HBox.margin>
