--- a/src/main/resources/nl/bos/views/Login.fxml
+++ b/src/main/resources/nl/bos/views/Login.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.*?>
 <VBox xmlns:fx="http://javafx.com/fxml/1" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity"
       minWidth="-Infinity" prefHeight="450.0" prefWidth="350.0" xmlns="http://javafx.com/javafx/8.0.121"
-      fx:controller="nl.bos.controllers.LoginPane">
+      fx:controller="nl.bos.controllers.Login">
     <padding>
         <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
     </padding>
