--- a/src/main/resources/nl/bos/views/Menu.fxml
+++ b/src/main/resources/nl/bos/views/Menu.fxml
@@ -3,11 +3,14 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.BorderPane?>
 <BorderPane xmlns:fx="http://javafx.com/fxml/1" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity"
-            minWidth="-Infinity" prefHeight="825.0" prefWidth="850.0" xmlns="http://javafx.com/javafx/8.0.121"
+            minWidth="-Infinity" prefHeight="825.0" prefWidth="850.0" xmlns="http://javafx.com/javafx/8.0.172-ea"
             fx:controller="nl.bos.controllers.Menu">
     <top>
         <MenuBar fx:id="menubar" disable="true" BorderPane.alignment="CENTER">
             <Menu mnemonicParsing="false" text="Tools">
+                <MenuItem mnemonicParsing="false" onAction="#openAPIScriptWindow" text="Execute API Script"/>
+                <MenuItem mnemonicParsing="false" onAction="#openDQLScriptWindow" text="Execute DQL Script"/>
+                <SeparatorMenuItem mnemonicParsing="false"/>
                 <MenuItem mnemonicParsing="false" onAction="#browseRepository" text="Browse Repository"/>
                 <SeparatorMenuItem mnemonicParsing="false"/>
                 <MenuItem mnemonicParsing="false" onAction="#describeObject" text="Describe Object"/>
