--- a/src/main/resources/nl/bos/views/Menu.fxml
+++ b/src/main/resources/nl/bos/views/Menu.fxml
@@ -11,8 +11,8 @@
                 <MenuItem mnemonicParsing="false" onAction="#describeObject" text="Describe Object"/>
                 <MenuItem mnemonicParsing="false" onAction="#getAttributes" text="Get Attributes"/>
                 <SeparatorMenuItem mnemonicParsing="false"/>
-                <MenuItem mnemonicParsing="false" onAction="#openAPIScriptWindow" text="Execute API Script"/>
-                <MenuItem mnemonicParsing="false" onAction="#openDQLScriptWindow" text="Execute DQL Script"/>
+                <MenuItem mnemonicParsing="false" onAction="#executeAPIScript" text="Execute API Script"/>
+                <MenuItem mnemonicParsing="false" onAction="#executeDQLScript" text="Execute DQL Script"/>
                 <SeparatorMenuItem mnemonicParsing="false"/>
                 <MenuItem mnemonicParsing="false" onAction="#browseRepository" text="Browse Repository"/>
                 <SeparatorMenuItem mnemonicParsing="false"/>
